Arreglo parciales y creo Main de uno