@@ -4,11 +4,22 @@ import tp3.ejercicio1.GeneralTree;
 
 public class ParcialArboles {
 	private GeneralTree<Integer> arbol;
-	
+
+	public ParcialArboles() {
+	}
+
+	public ParcialArboles(GeneralTree<Integer> arbol) {
+		this.arbol = arbol;
+	}
+
+	public void setArbol(GeneralTree<Integer> arbol) {
+		this.arbol = arbol;
+	}
+
 	public List<Integer> camino (int num) {
 		List<Integer> resultado = new LinkedList<>();
 		if ((this.arbol != null) && (!this.arbol.isEmpty()) && (this.arbol.getChildren().size() >= num))
-			recorrer(this.arbol, new LinkedList<Integer>(), resultado, num);
+			recorrer(this.arbol, new LinkedList<>(), resultado, num);
 		return resultado;
 	}
 	
@@ -19,14 +30,14 @@ public class ParcialArboles {
 			resultado.addAll(camino);
 			encontre = true;
 		} else {
-			if ((arbol.getChildren().size() >= num) && (!encontre)) {
+			if (arbol.getChildren().size() >= num) {
 				for (GeneralTree<Integer> child: arbol.getChildren()) {
 					encontre = recorrer(child,camino,resultado,num);
 					if (encontre) break;
 				}
 			}
 		}
-		camino.remove(camino.size()-1);
+		camino.removeLast();
 		return encontre;
 	}
 }
